# fahh-ide

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT_PROMPT.md  Cargo.toml  Dockerfile  FAHH_SFX.md  HANDOFF.md  HOW_TO_RUN.md  INSTALLER.md  README.md  TECHNICAL_DOCS.md  TECHSPEC.md  docs.html  download.html  fahh-test.mjs  index.html  package.json  play.html  pnpm-lock.yaml  tailwind.config.ts  test.py  test.rs  vercel.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
IMP_DOCS/: HANDOFF.md  INSTALLATION.md  PROMPT_TRAIL.md  STARTER_PROMPT.md  TECH_SPEC.md
IMP_DOCS/CANARY_RESULTS/: README.md  TODO.md  canary-runner.cjs
IMP_DOCS/CANARY_RESULTS/v0.2.0/: verification-report.md
docs/: ARCHITECTURE.md  docs.html  index.html  play.html
src/: App.tsx  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  test.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/core/: debugger.rs  editor.rs  error_detector.rs  formatter.rs  installer.rs  lsp.rs  lsp_client.rs  mod.rs  plugin.rs  quality.rs  runner.rs  runtime.rs  state.rs  terminal.rs  workspace.rs
src/app/: bootstrap.rs  mod.rs
src/components/: editor.rs  file_explorer.rs  search.rs  terminal.rs
src/core/: diagnostics.rs  editor.rs  frontend.rs  lsp.rs  mod.rs  plugin.rs  quality.rs  runtime.rs  state.rs  terminal.rs  workspace.rs
src/hooks/: useTerminal.ts  useWorkspace.ts
src/lib/: fahh.ts  tauri.ts  types.ts
src/store/: debugStore.ts  editorStore.ts  fileStore.ts  runnerStore.ts  terminalStore.ts  themeStore.ts
src/styles/: main.css
src/utils/: file_handler.rs  syntax.rs
tests/: mvp_flow.rs
vscode-faah-extension/: .gitignore  DELIVERABLES.md  DEVELOPMENT.md  INDEX.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  package.json  tsconfig.json
vscode-faah-extension/media/: README.md
vscode-faah-extension/src/: audio.ts  errorDetector.ts  extension.ts  state.ts
(+13 files in other folders)
