[package]
name = "fahh-ide"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
leptos = "0.6"
tauri = { version = "1", features = ["wry"] }
codemirror6 = "0.1.1"
highlight-js = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[bin]]
name = "fahh-ide"
path = "src/main.rs"