[package]
name = "fahh-ide"
version = "1.0.0"
edition = "2021"
description = "Rust-first fast IDE MVP foundation"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.23.0"

[lib]
name = "fahh_ide"
path = "src/lib.rs"

[[bin]]
name = "fahh-ide"
path = "src/main.rs"
